Fixed some typos

--- a/src/GuardClauses/GuardClauses.csproj
+++ b/src/GuardClauses/GuardClauses.csproj
@@ -7,15 +7,15 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Sascha Bajonczak</Authors>
     <Company>https://blog.bajonczak.com</Company>
-    <PackageProjectUrl>https://github.com/sbajonczak/guard</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/SBajonczak/GuardClauses</PackageProjectUrl>
     <Description>A simple package with guard clause helper methods. See docs for how to extend using your own extension methods.</Description>
     <Summary>A simple package with guard clause helper methods. See docs for how to extend using your own extension methods.</Summary>
-    <RepositoryUrl>https://github.com/sbajonczak/guard</RepositoryUrl>
+    <RepositoryUrl>https://github.com/SBajonczak/GuardClauses</RepositoryUrl>
     <PackageTags>guard clause clauses assert assertion</PackageTags>
     <PackageReleaseNotes>Added a new guard for NotFound; added support for optional custom error messages</PackageReleaseNotes>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <AssemblyName>Bajonczak.GuardClauses</AssemblyName>
-    <PackageIcon>icon.png</PackageIcon>
+    <PackageIcon></PackageIcon>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
@@ -24,9 +24,10 @@
     <DocumentationFile>bin\$(Configuration)\Bajonczak.GuardClauses.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-*" PrivateAssets="All" />
+    <None Remove="icon.png" />
+    <None Remove="icon.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="icon.png" Pack="true" Visible="false" PackagePath="" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-*" PrivateAssets="All" />
   </ItemGroup>
 </Project>
