--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: publish Ardalis.GuardClauses to nuget
+name: publish Bajonczak.GuardClauses to nuget
 on:
   push:
     branches:
@@ -7,7 +7,7 @@ on:
       - 'src/GuardClauses/**'
 jobs:
   publish:
-    name: list Ardalis.GuardClauses on nuget.org
+    name: list Bajonczak.GuardClauses on nuget.org
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
